refactor: improve parallax effect and adjust asteroid speeds
Refactored the parallax effect in Ufoprogramm.java to use multiple star layers with varying speeds and sizes for a more dynamic background. Adjusted the speed of asteroids in Astroid.java and FastAstroid.java to enhance gameplay balance. Updated .vscode/settings.json to include a new library path for compatibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/maxreif/Documents/Apps/sas.5.7.jar"
+        "/Users/maxreif/Documents/Apps/sas.5.7.jar",
+        "c:\\Users\\sonic\\Downloads\\sas.5.7.jar"
     ]
 }
